Thu Oct  4 13:56:33 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/data.c [own_data]: Removed some unused variables.
	(load_data()/save_data()): Removed, no longer needed.
	(window_data): Takes PROFILE_DATA * as argument instead of GtkWidget,
	also all references to own_data.menu was removed.

	* src/init.c: Removed alias/triggers/variables from menu.

	* src/gnome-mud.h (window_data): Changed.

	* src/profiles.c (profilelist_alias_cb): Callback for editing profiles
	through old data_* function.
	(profilelist_triggers_cb): ditto
	(profilelist_variables_cb): ditto
	(profilelist_(un)select_row_cb): Remade a little.
	(profilelist_dialog): Removed some functionality.
	(window_profile_edit): Added some signals.

Wed Oct  3 13:18:50 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/data.c (save_data, load_data, data_button_delete):    
	Removed sensitivity of button_save, which is not in use
	anymore.

	* src/profiles.c (profilelist_new_input_cb): Use live ProfileList,
	do not use temporary.
	(profilelist_new_cb): append clist with gnome_dialog call.
	(profilelist_delete_cb): Check and delete from right ProfileList
	and CList.
	(window_profile_edit): Added a few signal for button new/delete    
	and CList.

Thu Sep 13 11:44:41 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* Small changes to README.
	
Thu Aug 30 09:55:43 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/gnome-mud.h: Added window_profile_edit()

	* src/init.c: Added "Profiles" to toolbarmenu.

	* src/profiles.c (load_profiles): Fixed crash that appeared   
	when running AMCL first time without config.
	(window_profile_edit): Added better editor for profiles.

	* po/*.po: make update-po, with profiles.c included.
												
Mon Aug 27 18:43:58 CEST 2001  Jordi Mallach  <jordi@sindominio.net>

	* po/es.po: minor typo fix.

Sun Aug 12 20:52:41 CEST 2001  Robin Ericsson  <lobbin@localhost.nu>

	* src/net.c (read_from_connection): Changed buf from 2048 to 3000.
