@@ -25,4 +25,4 @@ core
 amcl.core
 TAGS
 tags
-gnomemud
+gnome-mud
